--- a/.gitconfig
+++ b/.gitconfig
@@ -1,11 +1,14 @@
 # This is Git's per-user configuration file.
 
+[init]
+	defaultBranch = main
+
 [user]
 	name = daryn
-	email = daryn@hex50.com
+	email = me@daryn.dev
 
 [core]
-    editor = code --wait
+    editor = codium --wait
 
 [alias]
 	graph = log --oneline --decorate --graph --all
