--- a/.gitconfig
+++ b/.gitconfig
@@ -8,7 +8,7 @@
 	email = me@daryn.dev
 
 [core]
-    editor = code --wait
+    editor = nvim -f
     pager = cat
 [alias]
 	# graph = log --oneline --decorate --graph --all
@@ -16,6 +16,7 @@
 	gst = status
 	gaa = add .
 	gcmsg = commit
-	
+  gac = !git add . && git commit
+
 [commit]
     template = ~/.gitmessage
